Templates/Kubernetes/gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway-service
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
  selector:
    app: api-gateway
  type: ClusterIP
status:
  loadBalancer: {}
